[package]
name = "usbd-ethernet"
version = "0.3.0"
edition = "2021"
description = "Communication Device Class Network Control Model (CDC-NCM) class for usb-device"
license = "MIT"
repository = "https://github.com/dlkj/usbd-ethernet"
keywords = ["usb", "usb-device", "network", "ethernet"]
categories = ["no-std", "embedded"]
authors = ["Daniel Kenyon-Jones"]
homepage = "https://github.com/dlkj/usbd-ethernet"

[dependencies]
smoltcp = { version = "0.12", default-features = false, features = [
    "defmt",
    "proto-ipv4",
    "medium-ethernet",
    "socket-udp",
] }
defmt = { version = "0.3", optional = true }
heapless = { version = "0.8", features = ["defmt-03"] }
usb-device = { version = "0.3", features = ["defmt"] }

[features]
defmt = ["dep:defmt", "usb-device/defmt"]
